adding model provider WIP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3008:3000"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - GOOGLE_GENERATIVE_AI_API_KEY=${GOOGLE_GENERATIVE_AI_API_KEY}
       - SOLO_API_KEY=${SOLO_API_KEY}
       - MODEL_VISION=${MODEL_VISION}
       - MODEL_TEXT=${MODEL_TEXT}
@@ -18,4 +19,4 @@ services:
 
       - OLLAMA_API_URL=${OLLAMA_API_URL}
     env_file:
-      - app/.env.local
+      - .env
